[package]
name = "bfrunner_macro"
description = "Compile time macro for you to enjoy brainfuck in rust."
authors = ["NekoTheCatgirl <thea@nekothecatgirl.com>"]
version = "0.1.1"
edition = "2024"
publish = true
license = "CC0-1.0"
readme = "Readme.md"
repository = "https://github.com/NekoTheCatgirl/bfrunner"
keywords = ["brainfuck", "interpreter", "fun", "esoteric", "learning"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
bfrunner = "0.1.*"
