[package]
name = "bfrunner"
description = "A Brainfuck interpreter in Rust, for shits and giggles. Not for production."
authors = ["NekoTheCatgirl <thea@nekothecatgirl.com>"]
version = "0.1.1"
edition = "2024"
publish = true
license = "CC0"
readme = "Readme.md"
repository = "https://github.com/NekoTheCatgirl/bfrunner"
keywords = ["brainfuck", "interpreter", "fun", "esoteric", "learning"]

[lib]
name = "bfrunner"
crate-type = ["lib", "cdylib"]

[features]
ffi = []
compile_time_macro = ["bfrunner_macro"]

[dependencies]
bfrunner_macro = { path = "../bfrunner-macro", optional = true }
thiserror = "2.0.18"
